# iterm2-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  design.md  requirements.md  research.md
src/iterm2_cli/: __init__.py  adapter.py  adapter_real.py  backend.py  cli.py  client.py  core.py  daemon.py  detect.py  keys.py  labels.py  protocol.py  resolver.py
tests/: fakes.py  test_backend.py  test_cli.py  test_core.py  test_daemon.py  test_detect.py  test_fakes.py  test_keys.py  test_labels.py  test_protocol.py  test_resolver.py
tests/integration/: test_real_smoke.py
