[project]
name = "iterm2-cli"
version = "0.0.1"
description = "iTerm2 をスクリプト/AIエージェントから操作する CLI（iterm2 Python API を直接利用）"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "wada811" }]
keywords = ["iterm2", "terminal", "cli", "automation", "macos", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["typer>=0.12"]

[project.urls]
Homepage = "https://github.com/wada811/iterm2-cli"
Repository = "https://github.com/wada811/iterm2-cli"
Issues = "https://github.com/wada811/iterm2-cli/issues"

[project.scripts]
iterm2-cli = "iterm2_cli.cli:app"
iterm2 = "iterm2_cli.cli:app"  # 短縮エイリアス（uv tool install で `iterm2` が使える）

[project.optional-dependencies]
# 実 iTerm2 への接続（RealAdapter / 結合テスト）でのみ必要。
# ユニットテストは FakeAdapter で回るため不要。
iterm2 = ["iterm2>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iterm2_cli"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110

# バグ検出を重視（F=pyflakes, B=bugbear, I=import順）。UP/SIM の cosmetic は外す。
[tool.ruff.lint]
select = ["F", "B", "I"]
ignore = [
    "B008",   # typer は Argument/Option をデフォルト引数で呼ぶのが正しい用法
]
